--- a/audioConvServer/package.json
+++ b/audioConvServer/package.json
@@ -17,6 +17,8 @@
     "fs": "0.0.1-security",
     "mongodb": "^3.1.13",
     "node-fetch": "^2.3.0",
+    "node-uuid": "^1.4.8",
+    "nodemailer": "^5.1.1",
     "path": "^0.12.7",
     "system-sleep": "^1.3.6",
     "uuid": "^3.3.2",
